# parabolic-sar-trend-strategy

./: .gitignore  README.md  pyproject.toml
docs/data/: data-dictionary.md  provider-audit.md
docs/experiments/: experiment-log.md
docs/sar_project/: sar_project_full_process_report.md  sar_project_report.md  stage2_ablation_results.csv  stage2_ablation_summary.md  summary_metrics.csv
docs/sar_project/audit/: README.md  audit_manifest.csv  best_params.json  data_coverage.csv  optimization_results_sample_in.csv  portfolio_sample_out.csv  raw_snapshot_manifest.csv  round_trip_trades_sample_out.csv  source_data_inventory.csv  trade_ledger_sample_out.csv
docs/sar_project/baseline/: README.md  annual_results.csv  metrics.csv  portfolio.csv  trades.csv
scripts/: run_checks.sh
src/sar_project/: __init__.py  audit.py  backtest.py  data_client.py  dataset.py  experiments.py  indicators.py  metrics.py  optimizer.py  pipeline.py  reporting.py  snapshots.py
tests/: test_sar_audit.py  test_sar_backtest.py  test_sar_indicators.py  test_sar_metrics_optimizer.py  test_sar_pipeline.py
